src/test/deca/context/invalid/void_dans_expression.deca
// Description :
// Utilisation d'une méthode sans return dans un int .

// Resultats :
// Echec

class Arbitre {
    void siffler() { }
}

{
    Arbitre a = new Arbitre();
    int x = a.siffler();
}
